# django-video-gatherer

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: python.yml
gatherer/: admin.py  fb_video_finder.py  models.py  serializers.py  tools.py  urls.py  views.py
gatherer/management/commands/: fetch_videos.py  group_videos.py
gatherer/migrations/: 0001_initial.py  0002_videosearch.py  0003_auto_20200423_1952.py  0004_auto_20200424_1121.py  0005_auto_20200425_1035.py  0006_video_yt_search_patter.py  0007_video_duration.py  0008_video_is_active.py  0009_auto_20200426_0923.py  0010_remove_video_yt_search_patter.py  0011_auto_20200427_1022.py  0012_auto_20200427_1023.py  0013_auto_20200427_1027.py  0014_auto_20200428_1047.py  0015_ytchannel.py  0016_ytsearchpattern_yt_channel.py  0017_auto_20200428_1530.py  0018_auto_20200428_1608.py  0019_auto_20200429_1050.py  0020_auto_20200430_1402.py  0021_ytsearchpattern_event_type.py  0022_auto_20200430_1420.py  0023_auto_20200430_1443.py  0024_auto_20200430_1511.py  0025_youtubevideo.py  0026_ytsearchpattern_tags.py  0027_update.py  0028_video_update.py  0029_auto_20200503_0934.py
gatherer/static/gatherer/js/: videos.js
gatherer/templates/admin/: list_videos.html  video_table.html
gatherer/templates/admin/gatherer/: searchpattern_change_form.html
gatherer/templates/admin/gatherer/fbsearchpattern/: change_form.html  video_jig.html
gatherer/templates/gatherer/: base.html  video_list.html  videos.html
gatherer/templatetags/: gatherer.py
locale/de/LC_MESSAGES/: django.po
(+3 files in other folders)
