
[metadata]
name = django-video-gatherer
version = attr: gatherer.__version__
author = Christof Franke
description = gather youtube videos 
# long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/MrKrautee/django-video-gatherer
project_urls =
    Bug Tracker = https://github.com/MrKrautee/django-video-gatherer/issues
license = GPLv3

[flake8]
exclude=
    .git,
    migrations,
    fixtures,
    video_provider
max-complexity = 10
